# proconf

./: .coveragerc  .flake8  .mypy.ini  README.md  pyproject.toml
.github/workflows/: main.yml
tests/: test_proconf.py
